--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,18 @@
   color: white;
 }
 
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 /*# sourceMappingURL=App.css.map */
 
 /*# sourceMappingURL=App.css.map */
