--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,18 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Biryani', sans-serif;
+  font-weight: 200;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.bold {
+  font-weight: 400;
+}
+
+title {
+  font-family: 'Sacramento', cursive;
 }
 
 code {
