--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,24 +1,27 @@
 body {
   margin: 0;
-  padding: 0;
-  font-family: "Biryani", sans-serif;
-  font-weight: 200;
+  padding: 40px;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-size: 12px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-.bold {
+body .bold {
   font-weight: 400;
+}
+body .italic {
+  font-style: italic;
+}
+body .center {
+  text-align: center;
 }
 
 .title {
   font-family: "Sacramento", cursive;
   font-size: 8em;
-  margin-left: 2%;
-}
-
-.code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  line-height: 0.5em;
+  margin-top: 40px;
 }
 
 /*# sourceMappingURL=index.css.map */
