--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,22 @@
   text-align: center;
 }
 
+.header {
+  position: relative;
+  text-align: center;
+}
+.header .brushstroke {
+  width: 28em;
+}
+.header .title {
+  font-family: "Kristi", cursive;
+  font-size: 7em;
+  line-height: 0.5em;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -160%);
+}
+
 /*# sourceMappingURL=App.css.map */
 
 /*# sourceMappingURL=App.css.map */
