--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,8 @@ body {
   padding: 40px;
   font-family: "Lato", sans-serif;
   font-weight: 300;
-  font-size: 12px;
+  font-size: 14px;
+  text-align: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,15 +14,15 @@ body .bold {
 body .italic {
   font-style: italic;
 }
-body .center {
-  text-align: center;
-}
 
-.title {
-  font-family: "Sacramento", cursive;
-  font-size: 8em;
-  line-height: 0.5em;
-  margin-top: 40px;
+a {
+  color: #C43546;
+  letter-spacing: 0.2em;
+  text-decoration: none;
+  transition: letter-spacing 0.2s;
+}
+a:hover {
+  letter-spacing: 0.3em;
 }
 
 /*# sourceMappingURL=index.css.map */
