--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,43 @@
+body {
+  margin: 0;
+  padding: 60px;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  text-align: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.subheader {
+  font-weight: 400;
+}
+
+a {
+  color: #C43546;
+  text-decoration: none;
+  transition: font-weight 0.2s;
+  padding: 0 0 0.1em;
+  position: relative;
+}
+a:before {
+  transform: scaleX(0);
+  visibility: hidden;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.05em;
+  bottom: 0;
+  left: 0;
+  background: #C43546;
+  border-radius: 0.1px;
+  transition: 0.25s linear;
+}
+a:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
 .App {
   text-align: center;
 }
@@ -15,7 +55,61 @@
   line-height: 0.5em;
   position: absolute;
   left: 50%;
-  transform: translate(-50%, -160%);
+  transform: translate(-50%, -165%);
+}
+
+.subheader {
+  font-size: 1.5em;
+  margin-top: 2.5em;
+  margin-bottom: 2em;
+}
+
+.contact {
+  position: absolute;
+  top: 75px;
+  right: 60px;
+  text-align: right;
+  font-size: 1.25em;
+}
+.contact a {
+  letter-spacing: 0.2em;
+  text-decoration: none;
+  transition: letter-spacing 0.2s;
+}
+.contact a:hover {
+  letter-spacing: 0.3em;
+  font-weight: 300;
+}
+.contact a:hover:before {
+  visibility: visible;
+  transform: scaleX(0);
+}
+
+.project-title:after, .project-title:before {
+  content: "";
+  display: inline-block;
+  width: 50%;
+  vertical-align: middle;
+  border-bottom: 0.5px solid;
+  color: #A5A5A5;
+}
+
+.project-title {
+  font-size: 2.5em;
+  margin: 1em 5em 0.5em;
+  position: relative;
+  overflow: hidden;
+}
+.project-title:before {
+  margin: 0 1.5em 0 -55%;
+}
+.project-title:after {
+  margin: 0 -55% 0 1.5em;
+}
+
+.description {
+  width: 30em;
+  display: inline-block;
 }
 
 /*# sourceMappingURL=App.css.map */
