--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   margin: 0;
   padding: 60px;
@@ -9,8 +10,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.subheader {
+.subheader, b {
   font-weight: 400;
+}
+
+.quote, i {
+  font-style: italic;
 }
 
 a {
@@ -36,6 +41,11 @@ a:before {
 a:hover:before {
   visibility: visible;
   transform: scaleX(1);
+}
+
+.quote {
+  text-align: center;
+  margin: 0.5em 0;
 }
 
 .App {
@@ -85,31 +95,32 @@ a:hover:before {
   transform: scaleX(0);
 }
 
-.project-title:after, .project-title:before {
-  content: "";
-  display: inline-block;
-  width: 50%;
-  vertical-align: middle;
-  border-bottom: 0.5px solid;
-  color: #A5A5A5;
-}
-
 .project-title {
   font-size: 2.5em;
   margin: 1em 5em 0.5em;
   position: relative;
   overflow: hidden;
 }
-.project-title:before {
-  margin: 0 1.5em 0 -55%;
-}
-.project-title:after {
-  margin: 0 -55% 0 1.5em;
-}
 
 .description {
-  width: 30em;
+  margin: 0 25% 0;
   display: inline-block;
+}
+
+ul {
+  text-align: left;
+  list-style: none;
+  padding-left: 2.5em;
+}
+ul li {
+  padding-bottom: 0.5em;
+}
+ul li:before {
+  content: "•";
+  color: #A5A5A5;
+  display: inline-block;
+  width: 1.5em;
+  margin-left: -1.5em;
 }
 
 /*# sourceMappingURL=App.css.map */
