--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -54,6 +54,24 @@ a {
   }
 }
 
+ul {
+  text-align: left;
+  list-style: none;
+  padding-left: 2.5em;
+
+  li {
+    padding-bottom: .5em;
+
+    &:before {
+      content: "\2022";
+      color: $color-gray;
+      display: inline-block;
+      width: 1.5em;
+      margin-left: -1.5em;
+    }
+  }
+}
+
 .quote {
   @extend %italic;
   text-align: center;
