--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,14 +1,17 @@
 @import './variables';
 
-body {
-  margin: 0;
-  padding: $page-margin;
+%body-font {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 16px;
   text-align: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+body {
+  @extend %body-font;
+  padding: $page-margin;
+  margin: 0;
 }
 
 %bold {
@@ -64,6 +67,7 @@ ul {
   text-align: left;
   list-style: none;
   padding-left: 2.5em;
+  margin: 1.5em 25%;
 
   li {
     padding-bottom: .5em;
@@ -82,6 +86,7 @@ ol {
   text-align: left;
   list-style: none;
   padding-left: 2.5em;
+  margin: 1.5em 25%;
 
   li {
     padding-bottom: .5em;
@@ -104,7 +109,7 @@ ol {
 }
 
 .description {
-  margin: 0 25% 0;
+  margin: 0 25%;
   display: inline-block;
 }
 
