--- a/src/styles/research.css
+++ b/src/styles/research.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-body {
+h2, h1, body {
   font-family: "Lato", sans-serif;
   font-weight: 300;
   font-size: 16px;
@@ -13,7 +13,7 @@ body {
   margin: 0;
 }
 
-.bold, b {
+h2, .bold, b {
   font-weight: 400;
 }
 
@@ -83,6 +83,21 @@ ol li:before {
   display: inline-block;
   width: 1.5em;
   margin-left: -1.5em;
+}
+
+h1 {
+  font-size: 2.5em;
+  margin: 1em 5em 0.5em;
+  position: relative;
+  overflow: hidden;
+  text-transform: lowercase;
+}
+
+h2 {
+  font-size: 1.5em;
+  margin-top: 2.5em;
+  margin-bottom: 2em;
+  text-transform: lowercase;
 }
 
 .quote {
