Add design section

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $page-margin: 60px;
 $color-pink: #C43546;
 $color-gray: #A5A5A5;
-$color-lightgray: #fff1ef;
+$color-lightpink: #fff1ef;
+$color-lightgray: #eaeaea;
