--- a/src/styles/research.scss
+++ b/src/styles/research.scss
@@ -1,10 +1,10 @@
-@import './variables';
+@import './_variables';
 @import './index.scss';
 
 .persona-container {
   margin: 3em 10%;
   padding: 3em;
-  background-color: $color-lightgray;
+  background-color: $color-lightpink;
 
   .persona-photo {
     width: 100%;
