--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -21,8 +21,8 @@
 
 .contact {
   position: absolute;
-  top: $page-margin + 15;
-  right: $page-margin;
+  top: 75px;
+  right: 60px;
   text-align: right;
   font-size: 1.25em;
 
