--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $page-margin: 60px 60px 100px;
 $color-pink: #C43546;
 $color-gray: #A5A5A5;
-$color-lightpink: #fff1ef;
+$color-lightpink: #fff3f3;
 $color-lightgray: #eaeaea;
