--- a/src/styles/design.css
+++ b/src/styles/design.css
@@ -1,15 +1,25 @@
 .screenSection {
-  margin: 0 10%;
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  max-width: 70em;
 }
 
 .screen {
+  margin: 2em 0.5em 0 0.5em;
   height: 20em;
-  margin-left: 2em;
-  margin-top: 2em;
+  position: relative;
+  text-align: center;
 }
 
 .outline {
   border: 1px solid #eaeaea;
+}
+
+@media screen and (max-width: 500px) {
+  .screen {
+    margin: 1em 0 0;
+  }
 }
 
 /*# sourceMappingURL=design.css.map */
