--- a/src/styles/research.css
+++ b/src/styles/research.css
@@ -10,7 +10,7 @@ h2, h1, body {
 
 body {
   padding: 60px 60px 100px;
-  margin: 0;
+  margin: 0 auto;
 }
 
 h2, .bold, b {
@@ -87,8 +87,9 @@ ol li:before {
 
 h1 {
   font-size: 2.5em;
-  margin: 1em 5em 0.5em;
+  margin: 1em 0 0.5em;
   position: relative;
+  text-align: center;
   overflow: hidden;
   text-transform: lowercase;
 }
@@ -106,7 +107,8 @@ h2 {
 }
 
 .description {
-  margin: 0 25%;
+  max-width: 50em;
+  margin: 0 auto;
   display: inline-block;
 }
 
@@ -117,26 +119,69 @@ h2 {
   margin: 3em 35%;
 }
 
-.persona-container {
-  margin: 3em 10%;
-  padding: 3em;
-  background-color: #fff1ef;
+@media screen and (max-width: 700px) {
+  ul, ol {
+    margin: 1.5em 0;
+  }
 }
-.persona-container .persona-photo {
+@media screen and (max-width: 500px) {
+  body {
+    font-size: 12px;
+  }
+
+  h2 {
+    margin-top: 1.5em;
+    margin-bottom: 1em;
+  }
+}
+.persona-container {
+  margin: 3em auto;
+  padding: 5%;
+  background-color: #fff3f3;
+}
+.persona-container .list {
+  margin: 1.5em 0;
+}
+.persona-container .intro {
+  width: 30%;
+}
+.persona-container .info {
+  text-align: left;
+  width: 50%;
+  padding-left: 10%;
+}
+
+.persona-photo {
   width: 100%;
   margin-bottom: 1em;
 }
-.persona-container .persona-col {
+
+.persona-col {
   vertical-align: top;
   display: inline-block;
 }
-.persona-container .persona-col .persona-row {
+
+.persona-row {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-.persona-container .list {
-  margin: 1.5em 0;
+
+@media screen and (max-width: 700px) {
+  .persona-col {
+    display: block;
+    width: 100%;
+  }
+
+  .persona-container > .intro {
+    width: 100%;
+    text-align: left;
+  }
+
+  .persona-container > .info {
+    width: 100%;
+    padding: 2em 0 0;
+  }
 }
 
 /*# sourceMappingURL=research.css.map */
