--- a/src/styles/research.scss
+++ b/src/styles/research.scss
@@ -2,28 +2,55 @@
 @import './index.scss';
 
 .persona-container {
-  margin: 3em 10%;
-  padding: 3em;
+  margin: 3em auto;
+  padding: 5%;
   background-color: $color-lightpink;
-
-  .persona-photo {
-    width: 100%;
-    margin-bottom: 1em;
-  }
-
-  .persona-col {
-    vertical-align: top;
-    display: inline-block;
-
-    .persona-row {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-    }
-  }
 
   .list {
     margin: 1.5em 0;
   }
+
+  .intro {
+    width: 30%;
+  }
+
+  .info {
+    text-align: left;
+    width: 50%;
+    padding-left: 10%;
+  }
+}
+.persona-photo {
+  width: 100%;
+  margin-bottom: 1em;
+}
+
+.persona-col {
+  vertical-align: top;
+  display: inline-block;
+}
+
+.persona-row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+@media screen and (max-width: 700px) {
+  .persona-col {
+    display: block;
+    width: 100%;
+  }
+
+  .persona-container > .intro {
+    width: 100%;
+    text-align: left;
+  }
+
+  .persona-container > .info {
+    width: 100%;
+    padding: 2em 0 0;
+  }
+
 }
 
