--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -41,6 +41,17 @@
   margin: 0 .5em;
 }
 
+
+@media screen and (max-width: 900px) {
+  .contact {
+    position: static;
+    display: block;
+    text-align: center;
+    font-size: 1.25em;
+    margin-top: 2em;
+  }
+}
+
 @media screen and (max-width: 500px) {
 
   .planitScreen {
