--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,8 +3,8 @@
 %body-font {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
-  font-size: 16px;
-  text-align: center;
+  font-size: 18px;
+  text-align: left;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -125,6 +125,7 @@ h2 {
   margin-top: 2.5em;
   margin-bottom: 2em;
   text-transform: lowercase;
+  text-align: center;
 }
 
 .quote {
@@ -137,6 +138,7 @@ h2 {
   max-width: 50em;
   margin: 0 auto;
   display: inline-block;
+  text-align: left;
 }
 
 .divider {
@@ -144,6 +146,10 @@ h2 {
   height: 1px;
   width: 30%;
   margin: 3em 35%;
+}
+
+.center {
+  text-align: center;
 }
 
 @media screen and (max-width: 700px) {
@@ -154,7 +160,7 @@ h2 {
 
 @media screen and (max-width: 500px) {
   body {
-    font-size: 12px;
+    font-size: 14px;
     padding: 30px 20px 70px;
   }
 
