Add resume download

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -182,6 +182,11 @@ h2 {
   margin: 0 0.5em;
 }
 
+.inlineDivider {
+  display: inline-block;
+  margin: 0 1em;
+}
+
 @media screen and (max-width: 900px) {
   .contact {
     position: static;
